	* Frontend user authentication is working with OpenID (tested with LiveJournal account)
	* Backend user authentication is working with OpenID (tested with LiveJournal and Yahoo accounts)
	* Add security to file-based OpenID store
	* Added necessary "unique" evaluations on the OpenID field
	* Patched OpenID library to use cURL proxy settings configured in TYPO3

2008-09-24  Ingo Renner  <ingo@typo3.org>

	* Cleaned up some code regarding the page caching to prepare for transition to t3lib_cache
	* Added columns to cache_pages needed for the t3lib_cache DB backend
	* Fixed bug in t3lib_cache: t3lib_cache_AbstractCache->save() didn't request a lifetime parameter, but the cache backends do
	* Changed adding and retrieving a page to/from the cache (cache_pages) to use the t3lib_cache
	* Added a method flushByTags() to the t3lib_cache classes
	* Added a method addCacheTags() to tslib_fe so that extensions can easily tag cache entries for pages
	* Added the caching framework in typo3/init.php so that it is available in the BE, too
	* Added class t3lib_cache to easily initialize the various caches in TYPO3 (cache_pages only for now)
	* Changed table cache_pagesection to use t3lib_cache

2008-09-23  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9411: Editors cannot create new translations of pages

2008-09-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #9401: Use debug() for sqlDebug (thanks to Steffen Kamper)

2008-09-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8719: File upload ends up in parse_url error on Windows (thanks to Steffen Kamper)

2008-09-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9404: htmlArea RTE: Cleaning out deprecated extension variables

2008-09-21  Benjamin Mack  <benni@typo3.org>

	* Followup to #9393: Small code cleanup in class.t3lib_treeview.php
	* Fixed bug #8578: Umlauts get displayed wrong in Web>Access module after updating rights (Thanks to Tobias Liebig and Susanne Moog)
