@@ -19,6 +19,7 @@
 	* Add security to file-based OpenID store
 	* Added necessary "unique" evaluations on the OpenID field
 	* Patched OpenID library to use cURL proxy settings configured in TYPO3
+	* openid system extension is reformatted with extdeveval
 
 2008-09-24  Ingo Renner  <ingo@typo3.org>
 
